// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactDetails renders correctly with all field errors 1`] = `
<form
  action="/api/form-handler"
  aria-label="components.contact-details.title"
  class="md:pt-8 pt-4 md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="locale"
    type="hidden"
  />
  <input
    name="currentStep"
    type="hidden"
    value="step-0"
  />
  <input
    name="nextStep"
    type="hidden"
    value="enquiry"
  />
  <div
    class="pb-6 md:pb-8"
  >
    <input
      name="flow"
      type="hidden"
    />
    <div
      class="flex flex-col gap-4 mb-8"
    >
      <div
        class="border-0 border-l-4 pl-5 border-red-600 border-solid"
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="email"
          >
            components.contact-details.form.email.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="email-hint"
            id="email-hint"
          >
            components.contact-details.form.email.hint
          </p>
          <p
            class="break-words mb-0 text-red-700"
            data-testid="email-error"
            id="email-error"
          >
            components.contact-details.form.email.error
          </p>
          <input
            aria-describedby="email-hint email-error"
            aria-invalid="true"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
            data-testid="input-email"
            id="email"
            name="email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="border-0 border-l-4 pl-5 border-red-600 border-solid"
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="phone-number"
          >
            components.contact-details.form.phone-number.optional.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="phone-number-hint"
            id="phone-number-hint"
          >
            components.contact-details.form.phone-number.hint
          </p>
          <p
            class="break-words mb-0 text-red-700"
            data-testid="phone-number-error"
            id="phone-number-error"
          >
            components.contact-details.form.phone-number.error
          </p>
          <input
            aria-describedby="phone-number-hint phone-number-error"
            aria-invalid="true"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
            data-testid="input-phone-number"
            id="phone-number"
            name="phone-number"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="border-0 border-l-4 pl-5 border-red-600 border-solid"
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="post-code"
          >
            components.contact-details.form.post-code.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="post-code-hint"
            id="post-code-hint"
          >
            components.contact-details.form.post-code.hint
          </p>
          <p
            class="break-words mb-0 text-red-700"
            data-testid="post-code-error"
            id="post-code-error"
          >
            components.contact-details.form.post-code.error
          </p>
          <input
            aria-describedby="post-code-hint post-code-error"
            aria-invalid="true"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
            data-testid="input-post-code"
            id="post-code"
            name="post-code"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
      >
        <svgr-mock
          class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
      >
        <p
          class="mb-4 break-words"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
    data-testid="form-button"
    type="submit"
  >
    <span />
    common.form.button.continue-text
    <span />
  </button>
</form>
`;

exports[`ContactDetails renders the component with no errors 1`] = `
<form
  action="/api/form-handler"
  aria-label="components.contact-details.title"
  class="md:pt-8 pt-4 md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="locale"
    type="hidden"
  />
  <input
    name="currentStep"
    type="hidden"
    value="step-0"
  />
  <input
    name="nextStep"
    type="hidden"
    value="enquiry"
  />
  <div
    class="pb-6 md:pb-8"
  >
    <input
      name="flow"
      type="hidden"
    />
    <div
      class="flex flex-col gap-4 mb-8"
    >
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="email"
          >
            components.contact-details.form.email.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="email-hint"
            id="email-hint"
          >
            components.contact-details.form.email.hint
          </p>
          <input
            aria-describedby="email-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-email"
            id="email"
            name="email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="phone-number"
          >
            components.contact-details.form.phone-number.optional.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="phone-number-hint"
            id="phone-number-hint"
          >
            components.contact-details.form.phone-number.hint
          </p>
          <input
            aria-describedby="phone-number-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-phone-number"
            id="phone-number"
            name="phone-number"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="post-code"
          >
            components.contact-details.form.post-code.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="post-code-hint"
            id="post-code-hint"
          >
            components.contact-details.form.post-code.hint
          </p>
          <input
            aria-describedby="post-code-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-post-code"
            id="post-code"
            name="post-code"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
      >
        <svgr-mock
          class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
      >
        <p
          class="mb-4 break-words"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
    data-testid="form-button"
    type="submit"
  >
    <span />
    common.form.button.continue-text
    <span />
  </button>
</form>
`;

exports[`ContactDetails renders with entry data populated 1`] = `
<form
  action="/api/form-handler"
  aria-label="components.contact-details.title"
  class="md:pt-8 pt-4 md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="locale"
    type="hidden"
  />
  <input
    name="currentStep"
    type="hidden"
    value="step-0"
  />
  <input
    name="nextStep"
    type="hidden"
    value="enquiry"
  />
  <div
    class="pb-6 md:pb-8"
  >
    <input
      name="flow"
      type="hidden"
      value="test-flow"
    />
    <div
      class="flex flex-col gap-4 mb-8"
    >
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="email"
          >
            components.contact-details.form.email.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="email-hint"
            id="email-hint"
          >
            components.contact-details.form.email.hint
          </p>
          <input
            aria-describedby="email-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-email"
            id="email"
            name="email"
            type="text"
            value="test@example.com"
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="phone-number"
          >
            components.contact-details.form.phone-number.optional.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="phone-number-hint"
            id="phone-number-hint"
          >
            components.contact-details.form.phone-number.hint
          </p>
          <input
            aria-describedby="phone-number-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-phone-number"
            id="phone-number"
            name="phone-number"
            type="text"
            value="07123456789"
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="post-code"
          >
            components.contact-details.form.post-code.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="post-code-hint"
            id="post-code-hint"
          >
            components.contact-details.form.post-code.hint
          </p>
          <input
            aria-describedby="post-code-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-post-code"
            id="post-code"
            name="post-code"
            type="text"
            value="SW1A 1AA"
          />
        </div>
      </div>
    </div>
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
      >
        <svgr-mock
          class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
      >
        <p
          class="mb-4 break-words"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
    data-testid="form-button"
    type="submit"
  >
    <span />
    common.form.button.continue-text
    <span />
  </button>
</form>
`;

exports[`ContactDetails renders with optional phone number label 1`] = `
<form
  action="/api/form-handler"
  aria-label="components.contact-details.title"
  class="md:pt-8 pt-4 md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="locale"
    type="hidden"
  />
  <input
    name="currentStep"
    type="hidden"
    value="step-0"
  />
  <input
    name="nextStep"
    type="hidden"
    value="enquiry"
  />
  <div
    class="pb-6 md:pb-8"
  >
    <input
      name="flow"
      type="hidden"
      value="other-flow"
    />
    <div
      class="flex flex-col gap-4 mb-8"
    >
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="email"
          >
            components.contact-details.form.email.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="email-hint"
            id="email-hint"
          >
            components.contact-details.form.email.hint
          </p>
          <input
            aria-describedby="email-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-email"
            id="email"
            name="email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="phone-number"
          >
            components.contact-details.form.phone-number.optional.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="phone-number-hint"
            id="phone-number-hint"
          >
            components.contact-details.form.phone-number.hint
          </p>
          <input
            aria-describedby="phone-number-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-phone-number"
            id="phone-number"
            name="phone-number"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="post-code"
          >
            components.contact-details.form.post-code.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="post-code-hint"
            id="post-code-hint"
          >
            components.contact-details.form.post-code.hint
          </p>
          <input
            aria-describedby="post-code-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-post-code"
            id="post-code"
            name="post-code"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
      >
        <svgr-mock
          class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
      >
        <p
          class="mb-4 break-words"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
    data-testid="form-button"
    type="submit"
  >
    <span />
    common.form.button.continue-text
    <span />
  </button>
</form>
`;

exports[`ContactDetails renders with required phone number label 1`] = `
<form
  action="/api/form-handler"
  aria-label="components.contact-details.title"
  class="md:pt-8 pt-4 md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="locale"
    type="hidden"
  />
  <input
    name="currentStep"
    type="hidden"
    value="step-0"
  />
  <input
    name="nextStep"
    type="hidden"
    value="enquiry"
  />
  <div
    class="pb-6 md:pb-8"
  >
    <input
      name="flow"
      type="hidden"
      value="mock-flow"
    />
    <div
      class="flex flex-col gap-4 mb-8"
    >
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="email"
          >
            components.contact-details.form.email.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="email-hint"
            id="email-hint"
          >
            components.contact-details.form.email.hint
          </p>
          <input
            aria-describedby="email-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-email"
            id="email"
            name="email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="phone-number"
          >
            components.contact-details.form.phone-number.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="phone-number-hint"
            id="phone-number-hint"
          >
            components.contact-details.form.phone-number.hint
          </p>
          <input
            aria-describedby="phone-number-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-phone-number"
            id="phone-number"
            name="phone-number"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="post-code"
          >
            components.contact-details.form.post-code.label
          </label>
          <p
            class="break-words mb-0 text-gray-650"
            data-testid="post-code-hint"
            id="post-code-hint"
          >
            components.contact-details.form.post-code.hint
          </p>
          <input
            aria-describedby="post-code-hint"
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-post-code"
            id="post-code"
            name="post-code"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
      >
        <svgr-mock
          class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
      >
        <p
          class="mb-4 break-words"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
    data-testid="form-button"
    type="submit"
  >
    <span />
    common.form.button.continue-text
    <span />
  </button>
</form>
`;
